# biospheres_rust

./: .gitignore  CURSOR_FIXES.md  Cargo.toml  GENOME_FORMAT.md  PORTING_SUMMARY.md  README.md  WIDGET_COMPARISON.md  build.rs  theme_settings.json  ui_settings.json
assets/shaders/: boundary_crossing.wgsl  gpu_collision.wgsl  volumetric_fog.wgsl
genomes/: README.md
src/: lib.rs  main.rs
src/cell/: adhesion.rs  adhesion_forces.rs  adhesion_manager.rs  adhesion_zones.rs  division.rs  mod.rs  types.rs
src/genome/: genome_data.rs  mod.rs  node_graph.rs
src/input/: cell_dragging.rs  mod.rs
src/rendering/: adhesion_lines.rs  boundary_crossing.rs  cells.rs  debug.rs  flagellocyte_mesh.rs  mod.rs  skybox.rs  volumetric_fog.rs
src/scene/: basic_scene.rs  mod.rs
src/simulation/: adhesion_inheritance.rs  cell_allocation.rs  clock.rs  cpu_physics.rs  cpu_sim.rs  double_buffer.rs  gpu_physics.rs  initial_state.rs  mod.rs  nutrient_system.rs  physics_config.rs  preview_sim.rs  synchronized_nutrients.rs
src/ui/: camera_settings.rs  cell_inspector.rs  debug_info.rs  edge_resize.rs  genome_editor.rs  imgui_panel.rs  imgui_style.rs  imgui_widgets.rs  imnodes_extensions.rs  lighting_settings.rs  main_menu_bar.rs  mod.rs  performance_monitor.rs  rendering_controls.rs  scene_manager.rs  settings.rs  system_tray.rs  theme_editor.rs  time_scrubber.rs
src/ui/imgui_integration/: config.rs  error.rs  manager.rs  mod.rs  texture_registry.rs
