[package]
name = "biospheres"
version = "0.1.8"
edition = "2021"

[lib]
name = "biospheres"
path = "src/lib.rs"

[[bin]]
name = "biospheres"
path = "src/main.rs"

[dependencies]
imgui = { version = "0.12.0", features = ["docking"] }
imgui-wgpu = "0.25.0"

imnodes = "0.5.0"
imnodes-sys = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
wgpu = "25.0"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "2.0"
pollster = "0.4"
winit = "0.29"
glam = "0.29"
log = "0.4"

[dependencies.crossbeam-channel]
version = "0.5"

[dependencies.futures-lite]
version = "2.0"

[dependencies.rayon]
version = "1.10"

[dev-dependencies]
proptest = "1.4"

[build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
