[package]
name = "biospheres"
version = "0.1.8"
edition = "2021"

[lib]
name = "biospheres"
path = "src/lib.rs"

[[bin]]
name = "biospheres"
path = "src/main.rs"

[dependencies]
imgui = { version = "0.12.0", features = ["docking"] }
imgui-wgpu = "0.25.0"

imnodes = "0.5.0"
imnodes-sys = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
wgpu = "25.0"
bytemuck = { version = "1.14", features = ["derive"] }
encase = "0.8"          # Shader buffer handling - eliminates padding/alignment boilerplate
ultraviolet = "0.9"     # SIMD math optimized for graphics/physics
wgpu-profiler = "0.18"  # GPU performance profiling (compatible version)
crevice = "0.16"        # Buffer layout control
naga = "22.0"           # Shader validation (compatible with wgpu 25)

# CPU Physics & Simulation
rapier3d = "0.22"       # High-performance 3D physics engine
nalgebra = "0.33"       # Linear algebra for physics calculations
parry3d = "0.16"        # Collision detection (used by Rapier)
spade = "2.9"           # Spatial data structures (Delaunay triangulation, etc.)

# Utility Crates
ahash = "0.8"           # Faster HashMap implementation
smallvec = "1.13"       # Stack-allocated vectors for small collections
arrayvec = "0.7"        # Fixed-capacity Vec alternative
parking_lot = "0.12"    # Faster mutexes and locks
dashmap = "6.1"         # Concurrent HashMap
once_cell = "1.20"      # Lazy static initialization
anyhow = "1.0"          # Error handling
itertools = "0.13"      # Iterator utilities
ndarray = "0.16"        # N-dimensional arrays for scientific computing

# Spatial Data Structures & Rendering 200k+ Spheres
kiddo = "4.2"           # Fast k-d trees for spatial queries
rstar = "0.12"          # R-tree spatial indexing for bounding boxes
octree = "0.1"          # Octree implementation for 3D spatial partitioning
grid = "0.14"           # 2D/3D grid data structure
kd-tree = "0.6"         # Alternative k-d tree implementation

# GPU Instancing & Culling
frustum_query = "0.1"   # Frustum culling utilities
collision = "0.20"      # Collision detection and spatial queries

# Performance for Large-Scale Rendering
memmap2 = "0.9"         # Memory-mapped files for large datasets
bumpalo = "3.16"        # Bump allocator for temporary allocations
slotmap = "1.0"         # Efficient entity storage with stable handles
hibitset = "0.6"        # Hierarchical bitsets for sparse data

thiserror = "2.0"
pollster = "0.4"
winit = "0.29"
glam = "0.29"
log = "0.4"

[dependencies.crossbeam-channel]
version = "0.5"

[dependencies.futures-lite]
version = "2.0"

[dependencies.rayon]
version = "1.10"

[dev-dependencies]
proptest = "1.4"

[build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
